# tcg-ec

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
_old_stuff/notebooks/: Ab-Jd-Qtz.ipynb  berman-sammon.ipynb  ec_reaction_stixrude.ipynb  ec_reactions.ipynb  eclogitization_breakwater_monzodiorite.ipynb  eclogitization_breakwater_peridotgabrro.ipynb  eclogitization_mafic.ipynb  eclogitization_mafic_simple.ipynb  eclogitization_sammon.ipynb  equilibrate_test.ipynb
database/: params.csv
docker/tcg/: Dockerfile
examples/: 1D-isentropic.tfml
models/: damkohler_fit.ipynb  parallel_experiment2.py  parallel_pd.py  parallel_profile.py
notebooks/: Isentropic_columns_equilibrate.ipynb  PhaseDiagram_FeSiO3_HighP_Figure13b.ipynb  PhaseDiagram_FeSiO3_LowP_Figure9d.ipynb  PhaseDiagram_Mg2SiO4_LowP_Figure9a.ipynb  PhaseDiagram_MgFeSiO4_LowP_Figure10a.ipynb  PhaseDiagram_MgFeSiO4_LowP_Figure10a_equilibrate_tcg.ipynb  PhaseDiagram_MgFeSiO4_LowP_Timing.ipynb  PhaseDiagram_MgSiAlAlSiO3_LowP_Figure10b_PETSc.ipynb  PhaseDiagram_MgSiO3_LowP_Figure9b_equilibrate_te.ipynb  PhaseDiagram_SiO2_HighP_Figure13d.ipynb  View_Data.ipynb  View_SLBEndmember.ipynb  View_SLBReactions.ipynb  geotherm_steady.py
python/: PhaseDiagram_MgFeSiO4_LowP_FEniCS.py  PhaseDiagram_MgFeSiO4_LowP_FEniCSX.py
r/: Cui2023TableS1.xlsx  compositions.csv  compositions_adjusted_data.csv  comps.R  critical.R
scripts/: build_reactions  generate_endmembers  generate_phases  generate_reactions
tcg_slb/cpp/PhaseDiagram_MgFeSiO4_LowP/point/petsc/: CMakeLists.txt  README.md
(+2237 files in other folders)
